--- a/linux/squid.conf
+++ b/linux/squid.conf
@@ -5,15 +5,6 @@ acl manager proto cache_object
 acl localhost src 127.0.0.1/32 ::1
 acl to_localhost dst 127.0.0.0/8 0.0.0.0/32 ::1
 
-# Example rule allowing access from your local networks.
-# Adapt to list your (internal) IP networks from where browsing
-# should be allowed
-acl localnet src 10.0.0.0/8     # RFC1918 possible internal network
-acl localnet src 172.16.0.0/12  # RFC1918 possible internal network
-acl localnet src 192.168.0.0/16 # RFC1918 possible internal network
-acl localnet src fc00::/7       # RFC 4193 local private network range
-acl localnet src fe80::/10      # RFC 4291 link-local (directly plugged) machines
-
 acl SSL_ports port 443
 acl Safe_ports port 80          # http
 acl Safe_ports port 21          # ftp
@@ -49,17 +40,14 @@ http_access deny CONNECT !SSL_ports
 # INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
 #
 
-acl bright src "my-own-ip-should-go-here"
+acl brigh src my-own-ip-should-go-here
+
 # acl dropdomain dstdomain .facebook.com
 # acl dropsex urlpath_regex /sexy.*jpg$
 # http_access deny dropdomain
 # http_access deny dropsex
-http_access allow bright
 
-# Example rule allowing access from your local networks.
-# Adapt localnet in the ACL section to list your (internal) IP networks
-# from where browsing should be allowed
-http_access allow localnet
+http_access allow bright
 http_access allow localhost
 
 # And finally deny all other access to this proxy
