--- a/linux/squid.conf
+++ b/linux/squid.conf
@@ -40,7 +40,7 @@ http_access deny CONNECT !SSL_ports
 # INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
 #
 
-acl brigh src my-own-ip-should-go-here
+acl bright src my-own-ip-should-go-here
 
 # acl dropdomain dstdomain .facebook.com
 # acl dropsex urlpath_regex /sexy.*jpg$
