--- a/linux/squid.conf
+++ b/linux/squid.conf
@@ -66,8 +66,11 @@ cache_dir ufs /var/spool/squid 100 16 256
 coredump_dir /var/spool/squid
 
 # config cache limit
-minimum_object_size 0 KB    # 小於多少 KB 的資料不要放快取，0 為不限制
-maximum_object_size 4096 KB # 與上頭相反，大於 4 MB 的資料就不快取到磁碟
+
+# HOW MUCH ADDITIONAL MEMORY SQUID WILL USE AS A MEMORY CACHE OF OBJECTS
+cache_mem 300 MB 
+minimum_object_size 1024 KB    # 小於多少 KB 的資料不要放快取，0 為不限制
+maximum_object_size 16384 KB   # 與上頭相反，大於 16 MB 的資料就不快取到磁碟
 cache_swap_low 90   # 與下一行有關，減低到剩下 90% 的磁碟快取為止
 cache_swap_high 95  # 當磁碟使用量超過 95% 就開始刪除磁碟中的舊快取
 
