--- a/linux/squid.conf
+++ b/linux/squid.conf
@@ -62,6 +62,8 @@ hierarchy_stoplist cgi-bin ?
 # Uncomment and adjust the following to add a disk cache directory.
 cache_dir ufs /var/spool/squid 1024 16 256
 
+store_dir_select_algorithm least-load
+
 # Leave coredumps in the first cache dir
 coredump_dir /var/spool/squid
 
