--- a/linux/squid.conf
+++ b/linux/squid.conf
@@ -63,6 +63,8 @@ hierarchy_stoplist cgi-bin ?
 cache_dir ufs /var/spool/squid 1024 16 256
 
 store_dir_select_algorithm least-load
+memory_replacement_policy lru
+cache_replacement_policy heap LFUDA
 
 # Leave coredumps in the first cache dir
 coredump_dir /var/spool/squid
