--- a/linux/.screenrc
+++ b/linux/.screenrc
@@ -8,6 +8,7 @@
 # C-K     => kill current window
 # C-t     => show current time
 # C-[     => enter copy-mode, you could scroll up and down using PageUp and PageDown
+# C-]     => paste from buffer
 
 vbell off
 altscreen on
